Revert "More fixes to align main grid on guestpage"
This reverts commit 8c3fdd2b6f9363ca706319d6adf2855882ba2982.

--- a/grails-app/assets/stylesheets/pashion/pashion.scss
+++ b/grails-app/assets/stylesheets/pashion/pashion.scss
@@ -431,9 +431,3 @@ filters-city {
 #looks > div > .grid-row:first-child {
   margin-top: 1em; 
 }
-.guestpage-filters {
-  margin-top: 3rem; 
-  padding-bottom: 1rem; 
-  overflow:hidden; 
-  min-height: 80px; 
-}
